# visual-sql-trainer

./: README.md  docker-compose.yml
client/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
client/src/: main.ts  shims-vue.d.ts
client/src/assets/: colors.css  main.css  sandbox.scss
client/src/components/: AuthModal.vue  DebuggerView.vue  SandboxView.vue  StatusSwitcher.vue  TasksView.vue
client/src/router/: index.ts
client/src/stores/: authStore.ts  store.ts
client/src/views/: HomeView.vue  WorkspaceView.vue
client/src/views/HomeView/: HomeFooter.vue  HomeHeader.vue  HomeMain.vue  HomePractice.vue  HomeTrain.vue  HomeView.vue
server/: Dockerfile  main.py  pyproject.toml
server/app/: database.py  models.py  schemas.py
server/app/routers/: auth.py  dumps.py  gen_sql_task.py  sql_query.py  sql_tasks.py
server/tests/: join_test.py  select_test.py
